local/backend/cicd/k8s/local/deploment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-core-test-api
  namespace: test-local
spec:
  selector:
    matchLabels:
      app: users-core-test-api
  replicas: 1
  template:
    metadata:
      labels:
        app: users-core-test-api
    spec:
      containers:
        - name: api
          image: localhost:32000/users.core.test:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
