local/backend/cicd/k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test-local
  annotations:
    nginx.ingress.kubernetes.io/poxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
spec:
  rules:
    - host: local.test.dom.com
      http:
        paths:
          - path: /api/v1/core/users
            pathType: Prefix
            backend:
              service:
                name: users-core-smartone-api-service
                port:
                  number: 9010
          - path: /api/v1/auth/login
            pathType: Prefix
            backend:
              service:
                name: user-core-test-api-service
                port:
                  number: 9010
